--- a/Part_2/Part_2.ipynb
+++ b/Part_2/Part_2.ipynb
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,143 @@
     "from numpy import set_printoptions\n",
     "from sklearn.preprocessing import MinMaxScaler\n",
     "names = ['preg', 'plas', 'pres', 'skin', 'test', 'mass', 'pedi', 'age', 'class']\n",
-    "df = read_csv('pima-indians-diabetes.data.csv', names=names)\n",
+    "df = read_csv('pima-indians-diabetes.data.csv', names=names)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>preg</th>\n",
+       "      <th>plas</th>\n",
+       "      <th>pres</th>\n",
+       "      <th>skin</th>\n",
+       "      <th>test</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>pedi</th>\n",
+       "      <th>age</th>\n",
+       "      <th>class</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>148</td>\n",
+       "      <td>72</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33.6</td>\n",
+       "      <td>0.627</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>85</td>\n",
+       "      <td>66</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26.6</td>\n",
+       "      <td>0.351</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>183</td>\n",
+       "      <td>64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23.3</td>\n",
+       "      <td>0.672</td>\n",
+       "      <td>32</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>89</td>\n",
+       "      <td>66</td>\n",
+       "      <td>23</td>\n",
+       "      <td>94</td>\n",
+       "      <td>28.1</td>\n",
+       "      <td>0.167</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>137</td>\n",
+       "      <td>40</td>\n",
+       "      <td>35</td>\n",
+       "      <td>168</td>\n",
+       "      <td>43.1</td>\n",
+       "      <td>2.288</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   preg  plas  pres  skin  test  mass   pedi  age  class\n",
+       "0     6   148    72    35     0  33.6  0.627   50      1\n",
+       "1     1    85    66    29     0  26.6  0.351   31      0\n",
+       "2     8   183    64     0     0  23.3  0.672   32      1\n",
+       "3     1    89    66    23    94  28.1  0.167   21      0\n",
+       "4     0   137    40    35   168  43.1  2.288   33      1"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(5)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(768, 8) (768,)\n"
+     ]
+    }
+   ],
+   "source": [
     "array = df.values\n",
     "# separate data into features and targets\n",
     "X = array[:,0:8]\n",
@@ -71,11 +207,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(768, 9)\n",
+      "             preg        plas        pres        skin        test        mass  \\\n",
+      "count  768.000000  768.000000  768.000000  768.000000  768.000000  768.000000   \n",
+      "mean     3.845052  120.894531   69.105469   20.536458   79.799479   31.992578   \n",
+      "std      3.369578   31.972618   19.355807   15.952218  115.244002    7.884160   \n",
+      "min      0.000000    0.000000    0.000000    0.000000    0.000000    0.000000   \n",
+      "25%      1.000000   99.000000   62.000000    0.000000    0.000000   27.300000   \n",
+      "50%      3.000000  117.000000   72.000000   23.000000   30.500000   32.000000   \n",
+      "75%      6.000000  140.250000   80.000000   32.000000  127.250000   36.600000   \n",
+      "max     17.000000  199.000000  122.000000   99.000000  846.000000   67.100000   \n",
+      "\n",
+      "             pedi         age       class  \n",
+      "count  768.000000  768.000000  768.000000  \n",
+      "mean     0.471876   33.240885    0.348958  \n",
+      "std      0.331329   11.760232    0.476951  \n",
+      "min      0.078000   21.000000    0.000000  \n",
+      "25%      0.243750   24.000000    0.000000  \n",
+      "50%      0.372500   29.000000    0.000000  \n",
+      "75%      0.626250   41.000000    1.000000  \n",
+      "max      2.420000   81.000000    1.000000  \n",
+      "class\n",
+      "0    500\n",
+      "1    268\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
    "source": [
     "# Print statistical summary and class breakdown\n",
     "from pandas import read_csv\n",
@@ -96,9 +263,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Age  Height  Weight\n",
+      "0  17.0     160    50.0\n",
+      "1  23.0     172    68.0\n",
+      "2   NaN     150    43.0\n",
+      "3  38.0     165    52.0\n",
+      "4  54.0     163    47.0\n",
+      "5  67.0     158    49.0\n",
+      "6  32.0     175     NaN\n",
+      "    Age  Height  Weight\n",
+      "0  17.0     160    50.0\n",
+      "1  23.0     172    68.0\n",
+      "3  38.0     165    52.0\n",
+      "4  54.0     163    47.0\n",
+      "5  67.0     158    49.0\n"
+     ]
+    }
+   ],
    "source": [
     "# Handling missing values by dropping data samples with missing values\n",
     "import pandas as pd\n",
@@ -120,11 +308,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "    Age  Height  Weight\n",
+      "0  17.0     160    50.0\n",
+      "1  23.0     172    68.0\n",
+      "2  35.0     150    43.0\n",
+      "3  38.0     165    52.0\n",
+      "4  54.0     163    47.0\n",
+      "5  67.0     158    49.0\n",
+      "6  32.0     175    51.5\n"
+     ]
+    }
+   ],
    "source": [
     "# Handling missing values by imputing missing values with statistic\n",
     "import pandas as pd\n",
@@ -146,9 +349,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[0.35294118 0.74371859 0.59016393 0.35353535 0.         0.50074516\n",
+      "  0.23441503 0.48333333]\n",
+      " [0.05882353 0.42713568 0.54098361 0.29292929 0.         0.39642325\n",
+      "  0.11656704 0.16666667]\n",
+      " [0.47058824 0.91959799 0.52459016 0.         0.         0.34724292\n",
+      "  0.25362938 0.18333333]\n",
+      " [0.05882353 0.44723618 0.54098361 0.23232323 0.11111111 0.41877794\n",
+      "  0.03800171 0.        ]\n",
+      " [0.         0.68844221 0.32786885 0.35353535 0.19858156 0.64232489\n",
+      "  0.94363792 0.2       ]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Scale data (between 0 and 1)\n",
     "from pandas import read_csv\n",
@@ -175,9 +395,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.63994726  0.84832379  0.14964075  0.90726993 -0.69289057  0.20401277\n",
+      "   0.46849198  1.4259954 ]\n",
+      " [-0.84488505 -1.12339636 -0.16054575  0.53090156 -0.69289057 -0.68442195\n",
+      "  -0.36506078 -0.19067191]\n",
+      " [ 1.23388019  1.94372388 -0.26394125 -1.28821221 -0.69289057 -1.10325546\n",
+      "   0.60439732 -0.10558415]\n",
+      " [-0.84488505 -0.99820778 -0.16054575  0.15453319  0.12330164 -0.49404308\n",
+      "  -0.92076261 -1.04154944]\n",
+      " [-1.14185152  0.5040552  -1.50468724  0.90726993  0.76583594  1.4097456\n",
+      "   5.4849091  -0.0204964 ]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Standardize data (0 mean, 1 stdev)\n",
     "from sklearn.preprocessing import StandardScaler\n",
@@ -203,9 +440,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 0.6         0.75151515  0.          0.375      -0.23968566  0.17204301\n",
+      "   0.66535948  1.23529412]\n",
+      " [-0.4        -0.77575758 -0.33333333  0.1875     -0.23968566 -0.58064516\n",
+      "  -0.05620915  0.11764706]\n",
+      " [ 1.          1.6        -0.44444444 -0.71875    -0.23968566 -0.93548387\n",
+      "   0.78300654  0.17647059]\n",
+      " [-0.4        -0.67878788 -0.33333333  0.          0.49901768 -0.41935484\n",
+      "  -0.5372549  -0.47058824]\n",
+      " [-0.6         0.48484848 -1.77777778  0.375       1.0805501   1.19354839\n",
+      "   5.00784314  0.23529412]]\n"
+     ]
+    }
+   ],
    "source": [
     "# Robust scaling (0 median, 1 IQR)\n",
     "from sklearn.preprocessing import RobustScaler\n",
@@ -231,9 +485,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   year  engine  review  make_Honda  make_Hyundai  make_Perodua  make_Toyota\n",
+      "0  2015     1.5       2           0             0             0            1\n",
+      "1  2017     1.8       3           1             0             0            0\n",
+      "2  2013     1.3       1           0             0             1            0\n",
+      "3  2018     1.6       2           0             1             0            0\n",
+      "4  2020     1.8       3           0             0             0            1\n"
+     ]
+    }
+   ],
    "source": [
     "# Handling categorical data\n",
     "import pandas as pd\n",
@@ -256,11 +523,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>preg</th>\n",
+       "      <th>plas</th>\n",
+       "      <th>pres</th>\n",
+       "      <th>skin</th>\n",
+       "      <th>test</th>\n",
+       "      <th>mass</th>\n",
+       "      <th>pedi</th>\n",
+       "      <th>age</th>\n",
+       "      <th>class</th>\n",
+       "      <th>plas_pres</th>\n",
+       "      <th>mass_ave</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>6</td>\n",
+       "      <td>148</td>\n",
+       "      <td>72</td>\n",
+       "      <td>35</td>\n",
+       "      <td>0</td>\n",
+       "      <td>33.6</td>\n",
+       "      <td>0.627</td>\n",
+       "      <td>50</td>\n",
+       "      <td>1</td>\n",
+       "      <td>220</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>85</td>\n",
+       "      <td>66</td>\n",
+       "      <td>29</td>\n",
+       "      <td>0</td>\n",
+       "      <td>26.6</td>\n",
+       "      <td>0.351</td>\n",
+       "      <td>31</td>\n",
+       "      <td>0</td>\n",
+       "      <td>151</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>8</td>\n",
+       "      <td>183</td>\n",
+       "      <td>64</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>23.3</td>\n",
+       "      <td>0.672</td>\n",
+       "      <td>32</td>\n",
+       "      <td>1</td>\n",
+       "      <td>247</td>\n",
+       "      <td>27.833333</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>89</td>\n",
+       "      <td>66</td>\n",
+       "      <td>23</td>\n",
+       "      <td>94</td>\n",
+       "      <td>28.1</td>\n",
+       "      <td>0.167</td>\n",
+       "      <td>21</td>\n",
+       "      <td>0</td>\n",
+       "      <td>155</td>\n",
+       "      <td>26.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>0</td>\n",
+       "      <td>137</td>\n",
+       "      <td>40</td>\n",
+       "      <td>35</td>\n",
+       "      <td>168</td>\n",
+       "      <td>43.1</td>\n",
+       "      <td>2.288</td>\n",
+       "      <td>33</td>\n",
+       "      <td>1</td>\n",
+       "      <td>177</td>\n",
+       "      <td>31.500000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   preg  plas  pres  skin  test  mass   pedi  age  class  plas_pres   mass_ave\n",
+       "0     6   148    72    35     0  33.6  0.627   50      1        220        NaN\n",
+       "1     1    85    66    29     0  26.6  0.351   31      0        151        NaN\n",
+       "2     8   183    64     0     0  23.3  0.672   32      1        247  27.833333\n",
+       "3     1    89    66    23    94  28.1  0.167   21      0        155  26.000000\n",
+       "4     0   137    40    35   168  43.1  2.288   33      1        177  31.500000"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Create 2 new features\n",
     "from pandas import read_csv\n",
@@ -282,9 +672,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['preg', 'plas', 'mass', 'age']\n"
+     ]
+    }
+   ],
    "source": [
     "# Feature Selection with Univariate Selection\n",
     "from pandas import read_csv\n",
@@ -311,11 +709,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['plas', 'mass', 'pedi']\n"
+     ]
+    }
+   ],
    "source": [
     "# Feature Selection with RFE\n",
     "from pandas import read_csv\n",
