--- a/handson_2/handson_2b.ipynb
+++ b/handson_2/handson_2b.ipynb
@@ -57,11 +57,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "knn1 score: 0.6133333333333333\n"
+     ]
+    }
+   ],
    "source": [
-    "knn1 = KNeighborsClassifier="
+    "knn1 = KNeighborsClassifier().fit(X1_train, y1_train)\n",
+    "print(f'knn1 score: {knn1.score(X1_test, y1_test)}')"
    ]
   },
   {
@@ -76,7 +85,12 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.preprocessing import MinMaxScaler\n",
+    "scaler = MinMaxScaler()\n",
+    "X2_train = scaler.fit_transform(X1_train)\n",
+    "X2_test = scaler.transform()"
+   ]
   },
   {
    "cell_type": "markdown",
