--- a/handson_3/handson_3.ipynb
+++ b/handson_3/handson_3.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -21,15 +21,144 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Height(cm)</th>\n",
+       "      <th>Weight(kg)</th>\n",
+       "      <th>Gender</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>187.6</td>\n",
+       "      <td>109.7</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>174.7</td>\n",
+       "      <td>73.6</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>188.2</td>\n",
+       "      <td>96.5</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>182.2</td>\n",
+       "      <td>99.8</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>177.5</td>\n",
+       "      <td>93.6</td>\n",
+       "      <td>Male</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9995</th>\n",
+       "      <td>168.1</td>\n",
+       "      <td>62.0</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9996</th>\n",
+       "      <td>170.4</td>\n",
+       "      <td>77.5</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9997</th>\n",
+       "      <td>162.2</td>\n",
+       "      <td>58.3</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9998</th>\n",
+       "      <td>175.3</td>\n",
+       "      <td>74.3</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>9999</th>\n",
+       "      <td>157.3</td>\n",
+       "      <td>51.6</td>\n",
+       "      <td>Female</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>10000 rows × 3 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      Height(cm)  Weight(kg)  Gender\n",
+       "0          187.6       109.7    Male\n",
+       "1          174.7        73.6    Male\n",
+       "2          188.2        96.5    Male\n",
+       "3          182.2        99.8    Male\n",
+       "4          177.5        93.6    Male\n",
+       "...          ...         ...     ...\n",
+       "9995       168.1        62.0  Female\n",
+       "9996       170.4        77.5  Female\n",
+       "9997       162.2        58.3  Female\n",
+       "9998       175.3        74.3  Female\n",
+       "9999       157.3        51.6  Female\n",
+       "\n",
+       "[10000 rows x 3 columns]"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "from pandas import read_csv, get_dummies\n",
     "from sklearn.model_selection import train_test_split as split\n",
     "from sklearn.linear_model import LinearRegression\n",
     "\n",
     "df = read_csv('heights_weights_genders.csv')\n",
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "X1 = df.values[:, 0].reshape(-1, 1)\n",
     "y1 = df.values[:, 1]\n",
     "X1_train, X1_test, y1_train, y1_test = split(X1, y1, random_state=42)\n",
