--- a/handson_3/handson_3.ipynb
+++ b/handson_3/handson_3.ipynb
@@ -155,9 +155,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "R2 score: 0.8573115456970967\n",
+      "Enter height: 175\n",
+      "Estimated weight is: [82.03843622]kg\n"
+     ]
+    }
+   ],
    "source": [
     "X1 = df.values[:, 0].reshape(-1, 1)\n",
     "y1 = df.values[:, 1]\n",
