--- a/handson_3/handson_3.ipynb
+++ b/handson_3/handson_3.ipynb
@@ -192,7 +192,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df2 = get_dummies(df, drop_first=True)"
+   ]
   },
   {
    "cell_type": "markdown",
