--- a/handson_3/handson_3.ipynb
+++ b/handson_3/handson_3.ipynb
@@ -189,11 +189,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "   Height(cm)  Weight(kg)  Gender_Male\n",
+      "0       187.6       109.7            1\n",
+      "1       174.7        73.6            1\n",
+      "2       188.2        96.5            1\n",
+      "3       182.2        99.8            1\n",
+      "4       177.5        93.6            1\n"
+     ]
+    }
+   ],
    "source": [
-    "df2 = get_dummies(df, drop_first=True)"
+    "df2 = get_dummies(df, drop_first=True)\n",
+    "print(df2.head())\n",
+    "y2 = df2['Weight(kg)'].values\n",
+    "del df2['Weight(kg)']\n",
+    "X2 = df2.values\n"
    ]
   },
   {
