--- a/handson_3/handson_3.ipynb
+++ b/handson_3/handson_3.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -201,7 +201,9 @@
       "1       174.7        73.6            1\n",
       "2       188.2        96.5            1\n",
       "3       182.2        99.8            1\n",
-      "4       177.5        93.6            1\n"
+      "4       177.5        93.6            1\n",
+      "(10000, 2) (10000,)\n",
+      "lr2 score: 0.9026663813060709\n"
      ]
     }
    ],
@@ -210,7 +212,12 @@
     "print(df2.head())\n",
     "y2 = df2['Weight(kg)'].values\n",
     "del df2['Weight(kg)']\n",
-    "X2 = df2.values\n"
+    "X2 = df2.values\n",
+    "print(X2.shape, y2.shape)\n",
+    "X2_train, X2_test, y2_train, y2_test = split(X2, y2, random_state=42)\n",
+    "\n",
+    "lr2 = LinearRegression().fit(X2_train, y2_train)\n",
+    "print(f'lr2 score: {lr2.score(X2_test, y2_test)}')"
    ]
   },
   {
