--- a/handson_3/handson_3.ipynb
+++ b/handson_3/handson_3.ipynb
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -203,7 +203,10 @@
       "3       182.2        99.8            1\n",
       "4       177.5        93.6            1\n",
       "(10000, 2) (10000,)\n",
-      "lr2 score: 0.9026663813060709\n"
+      "lr2 score: 0.9026663813060709\n",
+      "Enter height: 175\n",
+      "Enter gender (0 for female, 1 for male): 1\n",
+      "Estimated weight is: [84.45653817]kg\n"
      ]
     }
    ],
@@ -217,7 +220,11 @@
     "X2_train, X2_test, y2_train, y2_test = split(X2, y2, random_state=42)\n",
     "\n",
     "lr2 = LinearRegression().fit(X2_train, y2_train)\n",
-    "print(f'lr2 score: {lr2.score(X2_test, y2_test)}')"
+    "print(f'lr2 score: {lr2.score(X2_test, y2_test)}')\n",
+    "\n",
+    "h = eval(input('Enter height: '))\n",
+    "g = eval(input('Enter gender (0 for female, 1 for male): '))\n",
+    "print(f'Estimated weight is: {lr2.predict([[h, g]])}kg')"
    ]
   },
   {
