--- a/handson_3/handson_3.ipynb
+++ b/handson_3/handson_3.ipynb
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -266,10 +266,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Number of feature: 30\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Number of feature: {X.shape[1]}')"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -283,7 +293,9 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "kfold = KFold()"
+   ]
   },
   {
    "cell_type": "markdown",
