--- a/handson_3/handson_3.ipynb
+++ b/handson_3/handson_3.ipynb
@@ -294,7 +294,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kfold = KFold()"
+    "kfold = KFold(5, shuffle=True, random_state=42)\n",
+    "models = []\n",
+    "models.append(('knn', KNeighborsClassifier()))\n",
+    "models.append(('lgr', LogisticRegression()))\n",
+    "models.append(('dtc', DecisionTreeClassifier()))\n",
+    "\n",
+    "for m"
    ]
   },
   {
