--- a/handson_3/handson_3.ipynb
+++ b/handson_3/handson_3.ipynb
@@ -300,7 +300,9 @@
     "models.append(('lgr', LogisticRegression()))\n",
     "models.append(('dtc', DecisionTreeClassifier()))\n",
     "\n",
-    "for m"
+    "for n, m in models:\n",
+    "    scores = cross_val_score(m, X, y, cv=kfold, n_jobs=-1)\n",
+    "    print(f'{n} mean score: {scores.mean()}, std dev: {scores.std()}')"
    ]
   },
   {
