--- a/handson_3/handson_3.ipynb
+++ b/handson_3/handson_3.ipynb
@@ -290,9 +290,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "knn mean score: 0.936686849868033, std dev: 0.02809807834514385\n",
+      "lgr mean score: 0.9419655333022823, std dev: 0.033652071581884734\n",
+      "dtc mean score: 0.9367644775655954, std dev: 0.011508876248377273\n"
+     ]
+    }
+   ],
    "source": [
     "kfold = KFold(5, shuffle=True, random_state=42)\n",
     "models = []\n",
