--- a/handson_3/handson_3.ipynb
+++ b/handson_3/handson_3.ipynb
@@ -327,7 +327,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "selector = SelectKBest(10)\n",
+    "X"
+   ]
   },
   {
    "cell_type": "markdown",
