--- a/handson_3/handson_3.ipynb
+++ b/handson_3/handson_3.ipynb
@@ -361,7 +361,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "pca = PCA(n_components=10)\n",
+    "X3 = pca.fit_transform(X)"
+   ]
   },
   {
    "cell_type": "markdown",
