--- a/handson_3/handson_3.ipynb
+++ b/handson_3/handson_3.ipynb
@@ -358,12 +358,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(569, 10)\n",
+      "knn mean score: 0.936686849868033, std dev: 0.02809807834514385\n",
+      "lgr mean score: 0.9542617605961807, std dev: 0.015294618659067174\n",
+      "dtc mean score: 0.9191429902189101, std dev: 0.031124373982443915\n"
+     ]
+    }
+   ],
    "source": [
     "pca = PCA(n_components=10)\n",
-    "X3 = pca.fit_transform(X)"
+    "X3 = pca.fit_transform(X)\n",
+    "print(X3.shape)\n",
+    "\n",
+    "for n, m in models:\n",
+    "    scores = cross_val_score(m, X3, y, cv=kfold, n_jobs=-1)\n",
+    "    print(f'{n} mean score: {scores.mean()}, std dev: {scores.std()}')"
    ]
   },
   {
