--- a/handson_3/handson_3.ipynb
+++ b/handson_3/handson_3.ipynb
@@ -469,10 +469,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "df['Label'] = km.labels_\n",
+    "df.to_csv('labelled_drivers.csv', index=False)"
+   ]
   }
  ],
  "metadata": {
