--- a/handson_2/handson_2c.ipynb
+++ b/handson_2/handson_2c.ipynb
@@ -819,6 +819,18 @@
     "dct = DecisionTreeClassifier().fit(X_train, y_train)\n",
     "print(f'dct accuracy: {dct.score(X_test, y_test)}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.model_selection import GridSearchCV\n",
+    "\n",
+    "params = {}\n",
+    "params[]"
+   ]
   }
  ],
  "metadata": {
