--- a/handson_2/handson_2c.ipynb
+++ b/handson_2/handson_2c.ipynb
@@ -829,7 +829,9 @@
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "params = {}\n",
-    "params[]"
+    "params['max_leaf_nodes'] = list(range(2, 11))\n",
+    "params['max_depth'] = list(range(11))\n",
+    "gs = GridSearchCV(DecisionTreeClassifier(), params, cv=5, n_jobs=-1, verbos)"
    ]
   }
  ],
