--- a/handson_2/handson_2c.ipynb
+++ b/handson_2/handson_2c.ipynb
@@ -822,16 +822,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fitting 5 folds for each of 99 candidates, totalling 495 fits\n",
+      "{'max_depth': 3, 'max_leaf_nodes': 7}\n"
+     ]
+    }
+   ],
    "source": [
     "from sklearn.model_selection import GridSearchCV\n",
     "\n",
     "params = {}\n",
     "params['max_leaf_nodes'] = list(range(2, 11))\n",
     "params['max_depth'] = list(range(11))\n",
-    "gs = GridSearchCV(DecisionTreeClassifier(), params, cv=5, n_jobs=-1, verbos)"
+    "gs = GridSearchCV(DecisionTreeClassifier(), params, cv=5, n_jobs=-1, verbose=2)\n",
+    "gs.fit(X_train, y_train)\n",
+    "print(gs.best_params_)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dtc2 = DecisionTreeClassifier(**gs.best_params_).fit(X_train, y_train)\n",
+    "p"
    ]
   }
  ],
