--- a/handson_2/handson_2c.ipynb
+++ b/handson_2/handson_2c.ipynb
@@ -847,12 +847,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dtc2 accuracy: 0.8161434977578476\n"
+     ]
+    }
+   ],
    "source": [
     "dtc2 = DecisionTreeClassifier(**gs.best_params_).fit(X_train, y_train)\n",
-    "p"
+    "print(f'dtc2 accuracy: {dtc2.score(X_test, y_test)}')"
    ]
   }
  ],
